--- a/configure.in
+++ b/configure.in
@@ -1,11 +1,12 @@
 
 AC_REVISION($Revision: 1.21 $)
 
-AC_INIT(IFX MEI CPE Driver, 1.4.1, , drv_mei_cpe)
+AC_INIT(IFX MEI CPE Driver, 1.4.8.4, , drv_mei_cpe)
 AC_CONFIG_SRCDIR(src/Makefile.am)
 AM_INIT_AUTOMAKE
 
 AC_PROG_CC
+AM_PROG_CC_C_O
 AC_PROG_RANLIB
 
 AC_CONFIG_HEADER(src/drv_mei_cpe_config_auto.h)
@@ -140,7 +141,7 @@ dnl Set kernel build path
 AC_ARG_ENABLE(kernelbuild,
    AC_HELP_STRING([--enable-kernelbuild=x],[Set the target kernel build path]),
     [
-        if test -e $enableval/include/linux/autoconf.h; then
+        if test -e $enableval/include/linux/autoconf.h -o -e $enableval/include/generated/autoconf.h; then
             AC_SUBST([KERNEL_BUILD_PATH],[$enableval])
         else
             AC_MSG_ERROR([The kernel build directory is not valid or not configured!])
