--- a/src/drv_mei_cpe_config_auto.h.in
+++ b/src/drv_mei_cpe_config_auto.h.in
@@ -6,6 +6,9 @@
 /* Maximum DSL devices to support */
 #undef DSL_MAX_DEVICE_NUMBER
 
+/* Define to 1 if your C compiler doesn't accept -c and -o together. */
+#undef NO_MINUS_C_MINUS_O
+
 /* Name of package */
 #undef PACKAGE
 
