--- a/Makefile.in
+++ b/Makefile.in
@@ -35,8 +35,8 @@ POST_UNINSTALL = :
 subdir = .
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(top_srcdir)/configure ABOUT-NLS \
-	AUTHORS COPYING ChangeLog NEWS TODO compile depcomp install-sh \
-	missing
+	AUTHORS COPYING ChangeLog NEWS TODO compile config.rpath \
+	depcomp install-sh missing
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -146,6 +146,7 @@ CC = @CC@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
 CONFIGURE_OPTIONS = @CONFIGURE_OPTIONS@
+CONFIG_MEI_PREDEF_DBG_BAR = @CONFIG_MEI_PREDEF_DBG_BAR@
 CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
