--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 
 AC_REVISION($Revision: 1.21 $)
 
-AC_INIT(IFX MEI CPE Driver, 1.4.8.4, , drv_mei_cpe)
+AC_INIT(IFX MEI CPE Driver, 1.4.9.7, , drv_mei_cpe)
 AC_CONFIG_SRCDIR(src/Makefile.am)
 AM_INIT_AUTOMAKE
 
@@ -23,26 +23,31 @@ MEI_DRV_TARGET_OPTIONS=""
 dnl Select device support
 AM_CONDITIONAL(SELECT_DEVICE_SUPPORT, false)
 AC_ARG_ENABLE(device,
-    AC_HELP_STRING([--enable-device=vr9 | vr10 | ar9],[Select Device]),
+    AC_HELP_STRING([--enable-device=vr9 | vr10 | vr10_320 | ar9],[Select Device]),
     [
         echo Set Device = $enableval
         case $enableval in
         vr9)
             AM_CONDITIONAL(SELECT_DEVICE_SUPPORT, true)
             AC_SUBST([DSL_DEVICE_NAME],[VR9])
-            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_SUPPORT_DEVICE_VR9=1 -DMEI_SUPPORT_DEVICE_VR10=0 -DMEI_SUPPORT_DEVICE_AR9=0"
+            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_SUPPORT_DEVICE_VR9=1 -DMEI_SUPPORT_DEVICE_VR10=0 -DMEI_SUPPORT_DEVICE_VR10_320=0 -DMEI_SUPPORT_DEVICE_AR9=0"
             ;;
         vr10)
             AM_CONDITIONAL(SELECT_DEVICE_SUPPORT, true)
             AC_SUBST([DSL_DEVICE_NAME],[VR10])
-            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_SUPPORT_DEVICE_VR9=0 -DMEI_SUPPORT_DEVICE_VR10=1 -DMEI_SUPPORT_DEVICE_AR9=0"
+            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_SUPPORT_DEVICE_VR9=0 -DMEI_SUPPORT_DEVICE_VR10=1 -DMEI_SUPPORT_DEVICE_VR10_320=0 -DMEI_SUPPORT_DEVICE_AR9=0"
+            ;;
+        vr10_320)
+            AM_CONDITIONAL(SELECT_DEVICE_SUPPORT, true)
+            AC_SUBST([DSL_DEVICE_NAME],[VR10_320])
+            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_SUPPORT_DEVICE_VR9=0 -DMEI_SUPPORT_DEVICE_VR10=0 -DMEI_SUPPORT_DEVICE_VR10_320=1 -DMEI_SUPPORT_DEVICE_AR9=0"
             ;;
         ar9)
             AM_CONDITIONAL(SELECT_DEVICE_SUPPORT, true)
             AC_SUBST([DSL_DEVICE_NAME],[AR9])
-            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_SUPPORT_DEVICE_VR9=0 -DMEI_SUPPORT_DEVICE_VR10=0 -DMEI_SUPPORT_DEVICE_AR9=1"
+            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_SUPPORT_DEVICE_VR9=0 -DMEI_SUPPORT_DEVICE_VR10=0 -DMEI_SUPPORT_DEVICE_VR10_320=0 -DMEI_SUPPORT_DEVICE_AR9=1"
             ;;
-        *) AC_MSG_ERROR([ Select Device, use vr9 | vr10 | ar9 ]);
+        *) AC_MSG_ERROR([ Select Device, use vr9 | vr10 | vr10_320 | ar9 ]);
              ;;
         esac
     ]
@@ -286,6 +291,30 @@ AC_ARG_ENABLE(add_drv_modem_tests,
     ]
 )
 
+dnl enable BAR register debug support
+AC_ARG_ENABLE(predef-dbg-bar,
+    AC_HELP_STRING([--enable-predef-dbg-bar=x],[Enable predefined table for bar address init]),
+    [
+        case $enableval in
+        0|no)
+         AC_SUBST([CONFIG_MEI_PREDEF_DBG_BAR],[no])
+            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_PREDEF_DBG_BAR=0"
+            ;;
+        1|yes)
+         AC_SUBST([CONFIG_MEI_PREDEF_DBG_BAR],[yes])
+            MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_PREDEF_DBG_BAR=1"
+            ;;
+        *)
+         AC_SUBST([CONFIG_MEI_PREDEF_DBG_BAR],[no])
+            ;;
+        esac
+    ],
+    [
+        MEI_DRV_TARGET_OPTIONS="$MEI_DRV_TARGET_OPTIONS -DMEI_PREDEF_DBG_BAR=1"
+        AC_SUBST([CONFIG_MEI_PREDEF_DBG_BAR],[yes])
+    ]
+)
+
 dnl Enable MEI CPE driver build as a Loadable Kernel Module
 AC_ARG_ENABLE(lkm,
     AC_HELP_STRING([--enable-lkm=x],[Enable MEI CPE driver build as a Loadable Kernel Module]),
@@ -507,6 +536,7 @@ Configuration for drv_mei_cpe:
   IFXOS include path        :     ${IFXOS_INCLUDE_PATH}
   Enable debug prints       :     ${DSL_ENABLE_DEBUG_PRINTS}
   Enable error prints       :     ${DSL_ENABLE_ERROR_PRINTS}
+  Enable BAR debug support  :     ${CONFIG_MEI_PREDEF_DBG_BAR}
 
 Settings:
   Configure options:              ${CONFIGURE_OPTIONS}
